tests/baselines/reference/u-invalid-extended-pattern-char.errors.txt
u-invalid-extended-pattern-char.ts(19,2): error TS1506: Unexpected '{'. Did you mean to escape it with backslash?
u-invalid-extended-pattern-char.ts(19,4): error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.


==== u-invalid-extended-pattern-char.ts (2 errors) ====
    // Copyright (C) 2016 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    /*---
    esid: sec-patterns
    es6id: 21.2.1
    description: Quantifiable assertions disallowed with `u` flag
    info: |
        The `u` flag precludes the use of extended pattern characters irrespective
        of the presence of Annex B extensions.
    
        Term[U] ::
             [~U] ExtendedAtom
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /{/u;
     ~
!!! error TS1506: Unexpected '{'. Did you mean to escape it with backslash?
       ~
!!! error TS1499: This regular expression flag is only available when targeting 'ES2015' or later.
    